Resolves: fdo#81046 don't crash on compilers that enforce exception specs

bit of a hammer here, the offending property is "IsSplitAllowed" if someone
wants to attempt a more subtle fix

Change-Id: I37ed623a9947473fcb5c9e2b987d7a3dd9147ffa